# electron-grpc

./: .eslintrc  .gitignore  .prettierrc  package-lock.json  package.json  pyproject.toml
server/: cli.py  server.py
server/grpc_types/: greeter_pb2_grpc.py
src/main/: main.ts
src/renderer/: renderer.tsx
src/renderer/grpc/: functions.ts
src/renderer/grpc/components/: messageInputForm.tsx
src/renderer/grpc/protos/: greeter_grpc_pb.js  greeter_pb.js
src/renderer/pages/: home.tsx
